--- a/app/views/user_mailer/confirmation_email.html.erb
+++ b/app/views/user_mailer/confirmation_email.html.erb
@@ -1,7 +1,3 @@
-<h1>Bem-vindo, <%= @user.name %>!</h1>
-<p>
-  Obrigado por se registrar. Clique no link abaixo para confirmar sua conta:
-</p>
-<p>
-  <a href="<%= @confirmation_url %>">Confirmar Registro</a>
-</p>
+<p>Olá, <%= @user.first_name %>!</p>
+<p>Obrigado por se cadastrar no nosso serviço. Por favor, confirme seu e-mail clicando no link abaixo:</p>
+<a href="<%= confirm_email_url(@user) %>">Confirmar E-mail</a>
