new file:   app/controllers/api/v1/PasswordsController.rb         new file:   app/controllers/api/v1/admin/dashboard_controller.rb         modified:   app/controllers/api/v1/registrations_controller.rb         modified:   app/controllers/api/v1/sessions_controller.rb         modified:   app/controllers/application_controller.rb         modified:   app/mailers/user_mailer.rb         modified:   app/models/ancestor.rb         modified:   app/models/user.rb         modified:   app/views/user_mailer/confirmation_email.html.erb         new file:   app/views/user_mailer/password_reset_email.html.erb         modified:   config/routes.rb         new file:   db/migrate/20250108221826_add_admin_to_users.rb         modified:   db/schema.rb         new file:   test/controllers/admin/dashboard_controller_test.rb         new file:   test/controllers/static_controller_test.rb

--- a/app/views/user_mailer/confirmation_email.html.erb
+++ b/app/views/user_mailer/confirmation_email.html.erb
@@ -1,3 +1,9 @@
 <p>Olá, <%= @user.first_name %>!</p>
-<p>Obrigado por se cadastrar no nosso serviço. Por favor, confirme seu e-mail clicando no link abaixo:</p>
-<a href="<%= confirm_email_url(@user) %>">Confirmar E-mail</a>
+
+<p>Obrigado por se registar no HorsesInPocket. Por favor, confirme o seu email clicando no link abaixo:</p>
+
+<p><a href="<%= @confirmation_url %>">Confirmar Email</a></p>
+
+<p>Se não foi você quem fez este registo, por favor ignore este email.</p>
+
+<p>Obrigado,<br>Equipe HorsesInPocket</p>
