tranlante to english

--- a/app/views/user_mailer/confirmation_email.html.erb
+++ b/app/views/user_mailer/confirmation_email.html.erb
@@ -1,9 +1,9 @@
-<p>Olá, <%= @user.first_name %>!</p>
+<p>Hello, <%= @user.first_name %>!</p>
 
-<p>Obrigado por se registar no HorsesInPocket. Por favor, confirme o seu email clicando no link abaixo:</p>
+<p>Thank you for registering at HorseHub. Please confirm your email by clicking the link below:</p>
 
-<p><a href="<%= @confirmation_url %>">Confirmar Email</a></p>
+<p><a href="<%= @confirmation_url %>">Confirm Email</a></p>
 
-<p>Se não foi você quem fez este registo, por favor ignore este email.</p>
+<p>If you did not register, please ignore this email.</p>
 
-<p>Obrigado,<br>Equipe HorsesInPocket</p>
+<p>Thank you,<br>The HorseHub Team</p>
