--- a/app/views/user_mailer/password_reset_email.html.erb
+++ b/app/views/user_mailer/password_reset_email.html.erb
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>Redefinição de Senha</h1>
-    <p>Olá <%= @user.first_name %>,</p>
-    <p>Recebemos um pedido para redefinir a sua senha. Clique no link abaixo para redefini-la:</p>
+    <h1>Password Reset</h1>
+    <p>Hello <%= @user.first_name %>,</p>
+    <p>We received a request to reset your password. Click the link below to reset it:</p>
     <p>
-      <a href="<%= "#{ENV['FRONTEND_BASE_URL']}/reset/password/#{@token}" %>">Redefinir Senha</a>
-
-
+      <a href="<%= "#{ENV['FRONTEND_BASE_URL']}/reset/password/#{@token}" %>">Reset Password</a>
     </p>
-    <p>Se não fez este pedido, por favor ignore este email.</p>
+    <p>If you did not make this request, please ignore this email.</p>
   </body>
 </html>
