--- a/app/views/user_mailer/share_horse_email.html.erb
+++ b/app/views/user_mailer/share_horse_email.html.erb
@@ -1,7 +1,7 @@
-<h1><%= @sender.name %> compartilhou o cavalo <%= @horse.name %> com você!</h1>
+<h1><%= @sender.name %> has shared the horse <%= @horse.name %> with you!</h1>
 <p>
-  Clique no link abaixo para ver o cavalo:
+  Click the link below to view the horse:
 </p>
 <p>
-  <a href="<%= @horse_url %>">Visualizar Cavalo</a>
+  <a href="<%= @horse_url %>">View Horse</a>
 </p>
